syntax = "proto3";

package agentproxy.dev.listener;

import "common.proto";
import "rbac.proto";

message Listener {
  string name = 1;

  enum Protocol {
    MCP = 0;
    A2A = 1;
  }

  Protocol protocol = 2;

  oneof listener {
    SseListener sse = 3;
    StdioListener stdio = 4;
  }
}

message SseListener { 
  // The address of the listener.
  string address = 1;
  // The port of the listener.
  uint32 port = 2;

  message TlsConfig {
    agentproxy.dev.common.LocalDataSource key_pem = 1;
    agentproxy.dev.common.LocalDataSource cert_pem = 2;
  }

  TlsConfig tls = 3;

  message Authn {
    message JwtConfig {
      repeated string issuer = 1;
      repeated string audience = 2;
      oneof jwks {
        agentproxy.dev.common.LocalDataSource local_jwks = 3;
        agentproxy.dev.common.RemoteDataSource remote_jwks = 4;
      }
    }

    JwtConfig jwt = 1;
  }

  Authn authn = 4;

  repeated agentproxy.dev.rbac.RuleSet rbac = 5;
}

message StdioListener {}
